# fabrica-de-futbol-analytics

./: .env.example  .gitignore  AGENTS.md  AGENT_CONTEXT.json  README.md  app.py  pyproject.toml  requirements.txt
.agents/skills/fdf-analytics-orientation/: SKILL.md
fdf_analytics/: build_marts.py  config.py  extract.py  sample_data.py  schemas.py
scripts/: check_agent_impact.py
sql/: analytics_events.sql
tests/: test_marts.py
