[project]
name = "fabrica-de-futbol-analytics"
version = "0.1.0"
description = "Advanced analytics portfolio project for Fabrica de Futbol."
requires-python = ">=3.10,<3.15"
dependencies = [
  "duckdb",
  "pandas",
  "plotly",
  "polars",
  "psycopg[binary]",
  "python-dotenv",
  "pydantic",
  "streamlit",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

